[package]
name = "jsonrpc2"
version = "0.1.0"
authors = ["Sam Crow <samcrow@uw.edu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/samcrow/rust-jsonrpc2"
keywords = ["JSON", "RPC"]
description = "A JSON RPC implementation supporting many transport layers"

[dependencies]
serde_json = "^0.6"
chrono = "^0.2"
hyper = { version = "^0.6", optional = true }
url = { version = "^0.5", optional = true }

[features]
# Optional HTTP support
http = ["hyper", "url"]
